# alx-low_level_programming

./: .gitignore  CMakeLists.txt  alx-low_level_programming.code-workspace  run  run.sh
0x00-hello_world/: 0-preprocessor  1-compiler  101-quote.c  4-puts.c  5-printf.c  6-size  6-size.c
0x01-variables_if_else_while/: 0-positive_or_negative.c  1-last_digit  1-last_digit.c  2-print_alphabet.c  3-print_alphabets.c  4-print_alphabt  4-print_alphabt.c  6-print_numberz.c  7-print_tebahpla  7-print_tebahpla.c  8-print_base16  8-print_base16.c
0x02-functions_nested_loops/: 0-putchar.c  1-alphabet.c  10-add.c  100-times_table.c  101-natural.c  11-print_to_98.c  11-print_to_98_copy  11-print_to_98_copy.c  2-print_alphabet_x10.c  3-islower.c  4-isalpha.c  5-sign.c  6-abs.c  7-print_last_digit.c  8-24_hours.c  9-times_table.c  g.c.save
0x03-debugging/: 0-main  0-main.c  0-positive_or_negative.c  1-main.c  2-largest_number.c  2-main.c  3-main_a.c  3-print_remaining_days.c  main.h  test.c
0x04-more_functions_nested_loops/: 0-isupper.c  1-isdigit.c  10-print_triangle.c  101-print_number.c  2-mul.c  3-print_numbers.c  4-print_most_numbers.c  5-more_numbers.c  6-print_line.c  7-print_diagonal.c  8-print_square.c  9-fizz_buzz  9-fizz_buzz.c
0x05-pointers_arrays_strings/: 0-reset_to_98.c  1-swap.c  2-strlen.c  3-puts.c  4-print_rev.c  5-rev_string  5-rev_string.c  6-puts2.c  7-puts_half.c  8-print_array  8-print_array.c  9-strcpy.c  main.h
0x06-pointers_arrays_strings/: 0-strcat.c  1-strncat.c  100-rot13.c  101-print_number.c  102  102-magic  102-magic.c  103-infinite_add.c  103-main.c  2-strncpy.c  3-strcmp.c  4-rev_array.c  5-string_toupper.c  6-cap_string.c  7-leet.c  main.h
0x07-pointers_arrays_strings/: 0-memset.c  1-memcpy.c  2-strchr.c  3-strspn_kamal.c  main.h  md5  md5.c
0x08-recursion/: 0-puts_recursion.c  1-print_rev_recursion.c  100-is_palindrome.c  101-wildcmp  (+7 more)
(+178 files in other folders)
